vánoční písně: ČRo + grafy

--- a/grafy/hiphop.html
+++ b/grafy/hiphop.html
@@ -1,4 +1,4 @@
-<html><head><title>Hip hop lidé streamují, v rádiu zní sváteènì</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Hip hop lidé poslouchají online, v rádiu zní sváteènì</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="hiphop">
         <div id="container"></div>
         </figure>
@@ -17,7 +17,7 @@ Highcharts.chart('hiphop',
   credits: {
   enabled: true,
   href: 'https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika',
-  text: 'Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
+  text: 'Zdroj dat: ÈNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
   data: [{
@@ -210,12 +210,12 @@ Highcharts.chart('hiphop',
 }],
   subtitle: {
   align: 'left',
-  text: 'Jak velký podíl na všech hitparádových pøíèkách mìli umìlci hrající primárnì rap, hip hop, trap atp.'
+  text: 'Podíl interpretù hrajících hiphop a rap na všech hitparádových pøíèkách.'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Hip hop lidé streamují, v rádiu zní sváteènì'
+  text: 'Hip hop lidé poslouchají online, v rádiu zní sváteènì'
 },
   xAxis: {
   categories: ['2006',
