--- a/grafy/vanoce_celorok.html
+++ b/grafy/vanoce_celorok.html
@@ -1,4 +1,4 @@
-<html><head><title>Ve kterých týdnech se vánoèní hity dostávají do top 100</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Ve kterých týdnech se vánoèní hity dostávají do top 100</title></head><body>
         <figure id="vanoce_celorok">
         <div id="container"></div>
         </figure>
@@ -83,13 +83,14 @@ Highcharts.chart('vanoce_celorok',
 {
   y: 1
 }],
+  name: 'Hitparádové pøíèky obsazené od roku 2006 vánoèními písnìmi',
   yAxis: 0,
   visible: true,
   type: 'column'
 }],
   subtitle: {
   align: 'left',
-  text: 'Èíslo na svislé ose udává celkový poèet obsazených hitparádových pøíèek od roku 2006. Do bøezna v hitparádì vydržely Biela krása od No Name (2013), Snìhulák od Michala Hrùzy (2015) a Lover od Taylor Swift (2020). V roce 2023 zaèíná 48. týden 27. listopadu.'
+  text: 'Do bøezna v hitparádì vydržely Biela krása od No Name (2013), Snìhulák od Michala Hrùzy (2015) a Lover od Taylor Swift (2020).'
 },
   title: {
   align: 'left',
