--- a/grafy/vydavatelstvo.html
+++ b/grafy/vydavatelstvo.html
@@ -1,4 +1,4 @@
-<html><head><title>Podíl vydavatelù na obsazených hitparádových pøíèkách</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Podíl vydavatelù na hitparádových pøíèkách</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="vydavatelstvo">
         <div id="container"></div>
         </figure>
@@ -57,7 +57,7 @@ Highcharts.chart('vydavatelstvo',
   y: 37.5
 },
 {
-  y: 42.4
+  y: 42.3
 },
 {
   y: 45.5
@@ -69,10 +69,10 @@ Highcharts.chart('vydavatelstvo',
   y: 41.5
 },
 {
-  y: 38.9
+  y: 39.0
 },
 {
-  y: 38.4
+  y: 38.3
 }],
   name: 'Universal Music',
   yAxis: 0,
@@ -117,10 +117,10 @@ Highcharts.chart('vydavatelstvo',
   y: 20.1
 },
 {
-  y: 24.8
+  y: 24.9
 },
 {
-  y: 22.2
+  y: 22.1
 },
 {
   y: 19.5
@@ -132,7 +132,7 @@ Highcharts.chart('vydavatelstvo',
   y: 20.9
 },
 {
-  y: 19.6
+  y: 19.7
 },
 {
   y: 15.7
@@ -183,7 +183,7 @@ Highcharts.chart('vydavatelstvo',
   y: 23.7
 },
 {
-  y: 18.6
+  y: 18.8
 },
 {
   y: 16.8
@@ -195,7 +195,7 @@ Highcharts.chart('vydavatelstvo',
   y: 15.1
 },
 {
-  y: 18.5
+  y: 18.4
 },
 {
   y: 21.6
@@ -306,7 +306,7 @@ Highcharts.chart('vydavatelstvo',
   y: 5.0
 },
 {
-  y: 3.4
+  y: 3.3
 },
 {
   y: 4.1
@@ -369,7 +369,7 @@ Highcharts.chart('vydavatelstvo',
   y: 11.2
 },
 {
-  y: 9.3
+  y: 9.2
 },
 {
   y: 10.0
@@ -384,10 +384,10 @@ Highcharts.chart('vydavatelstvo',
   y: 12.9
 },
 {
-  y: 13.4
+  y: 13.3
 },
 {
-  y: 14.0
+  y: 14.1
 }],
   name: 'ostatní',
   yAxis: 0,
@@ -397,10 +397,14 @@ Highcharts.chart('vydavatelstvo',
   visible: true,
   type: 'line'
 }],
+  subtitle: {
+  align: 'left',
+  text: 'Malým vydavatelùm se vede lépe než pøed 15 lety, dominanci velkých však zásadnì nenabourali. V øadì pøípadù jde o hudební samizdat – mimo jiné u singlù Marka Ztraceného, Olgy Lounové nebo Tomáše Kluse.'
+},
   title: {
   align: 'left',
   margin: 30,
-  text: 'Podíl vydavatelù na obsazených hitparádových pøíèkách'
+  text: 'Podíl vydavatelù na hitparádových pøíèkách'
 },
   xAxis: {
   categories: ['2006',
