--- a/grafy/genderovy_podil_stream.html
+++ b/grafy/genderovy_podil_stream.html
@@ -1,4 +1,4 @@
-<html><head><title>Podíl sólovì vystupujících žen a mužù v žebøíèku TOP 50 digitálních singlù</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Podíl sólovì vystupujících žen a mužù v žebøíèku TOP 100 digitálních singlù</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="genderovy_podil_stream">
         <div id="container"></div>
         </figure>
@@ -27,19 +27,19 @@ Highcharts.chart('genderovy_podil_stream',
 },
   series: [{
   data: [{
-  y: 4.4
+  y: 4.2
 },
 {
-  y: 4.1
+  y: 3.9
 },
 {
-  y: 0.7
+  y: 0.6
 },
 {
-  y: 3.1
+  y: 2.9
 },
 {
-  y: 1.2
+  y: 1.4
 },
 {
   y: 1.8
@@ -48,13 +48,13 @@ Highcharts.chart('genderovy_podil_stream',
   y: 0.9
 },
 {
-  y: 0.8
+  y: 0.9
 },
 {
-  y: 0.7
+  y: 0.6
 },
 {
-  y: 2.7
+  y: 2.4
 }],
   name: 'podíl genderfluid a nebinárních osob',
   yAxis: 0,
@@ -66,36 +66,36 @@ Highcharts.chart('genderovy_podil_stream',
 },
 {
   data: [{
-  y: 61.6
+  y: 61.7
 },
 {
-  y: 68.8
+  y: 70.6
 },
 {
-  y: 68.2
+  y: 68.1
 },
 {
-  y: 76.8
+  y: 76.3
 },
 {
-  y: 80.0
+  y: 80.4
 },
 {
-  y: 73.6
+  y: 74.2
 },
 {
-  y: 82.4
+  y: 82.8
 },
 {
-  y: 81.4
+  y: 81.9
 },
 {
-  y: 87.4
+  y: 86.2
 },
 {
-  y: 84.9
+  y: 83.5
 }],
-  name: 'podíl žen',
+  name: 'podíl mužù',
   yAxis: 0,
   tooltip: {
   valueSuffix: ' %'
@@ -105,34 +105,34 @@ Highcharts.chart('genderovy_podil_stream',
 },
 {
   data: [{
-  y: 34.0
+  y: 34.1
 },
 {
-  y: 27.0
+  y: 25.5
 },
 {
-  y: 31.1
+  y: 31.3
 },
 {
-  y: 20.1
+  y: 20.7
 },
 {
-  y: 18.8
+  y: 18.2
 },
 {
-  y: 24.6
+  y: 24.0
 },
 {
-  y: 16.7
+  y: 16.3
 },
 {
-  y: 17.8
+  y: 17.2
 },
 {
-  y: 11.9
+  y: 13.1
 },
 {
-  y: 12.4
+  y: 14.1
 }],
   name: 'podíl žen',
   yAxis: 0,
@@ -144,12 +144,12 @@ Highcharts.chart('genderovy_podil_stream',
 }],
   subtitle: {
   align: 'left',
-  text: 'Z 755 lidí v datech se jinak než jako žena èi muž identifikují Miley Cyrus, Demi Lovato, Sam Smith a Lil Uzi Vert.'
+  text: 'Z 947 lidí v datech se jinak než jako žena èi muž identifikují Miley Cyrus, Demi Lovato, Sam Smith a Lil Uzi Vert.'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Podíl sólovì vystupujících žen a mužù v žebøíèku TOP 50 digitálních singlù'
+  text: 'Podíl sólovì vystupujících žen a mužù v žebøíèku TOP 100 digitálních singlù'
 },
   xAxis: {
   categories: ['2014',
