úpravy grafů do 2. dílu

--- a/grafy/typicka_trajektorie.html
+++ b/grafy/typicka_trajektorie.html
@@ -20,487 +20,175 @@ Highcharts.chart('typicka_trajektorie',
   text: 'Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
-  data: [{
-  y: 65.0
-},
-{
-  y: 51.0
-},
-{
-  y: 43.0
-},
-{
-  y: 35.0
-},
-{
-  y: 27.0
-},
-{
-  y: 19.0
-},
-{
-  y: 13.0
-},
-{
-  y: 9.0
-},
-{
-  y: 7.0
-},
-{
-  y: 6.0
-},
-{
-  y: 5.0
-},
-{
-  y: 4.0
-},
-{
-  y: 4.0
-},
-{
-  y: 4.0
-},
-{
-  y: 4.0
-},
-{
-  y: 5.0
-},
-{
-  y: 6.0
-},
-{
-  y: 8.0
-},
-{
-  y: 11.0
-},
-{
-  y: 12.0
-},
-{
-  y: 14.0
-},
-{
-  y: 16.0
-},
-{
-  y: 19.0
-},
-{
-  y: 21.0
-},
-{
-  y: 27.0
-},
-{
-  y: 31.0
-},
-{
-  y: 30.0
-},
-{
-  y: 36.0
-},
-{
-  y: 39.0
-},
-{
-  y: 40.0
-},
-{
-  y: 45.0
-},
-{
-  y: 46.0
-},
-{
-  y: 53.0
-},
-{
-  y: 56.0
-},
-{
-  y: 59.0
-},
-{
-  y: 60.0
-},
-{
-  y: 69.0
-},
-{
-  y: 74.0
-},
-{
-  y: 78.0
-},
-{
-  y: 81.0
-},
-{
-  y: 84.0
-},
-{
-  y: 90.0
-},
-{
-  y: 88.0
-},
-{
-  y: 94.0
-},
-{
-  y: 98.0
-},
-{
-  y: 98.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-}],
+  data: [[65.0],
+[51.0],
+[43.0],
+[35.0],
+[27.0],
+[19.0],
+[13.0],
+[9.0],
+[7.0],
+[6.0],
+[5.0],
+[4.0],
+[4.0],
+[4.0],
+[4.0],
+[5.0],
+[6.0],
+[8.0],
+[11.0],
+[12.0],
+[14.0],
+[16.0],
+[19.0],
+[21.0],
+[27.0],
+[31.0],
+[30.0],
+[36.0],
+[39.0],
+[40.0],
+[45.0],
+[46.0],
+[53.0],
+[56.0],
+[59.0],
+[60.0],
+[69.0],
+[74.0],
+[78.0],
+[81.0],
+[84.0],
+[90.0],
+[88.0],
+[94.0],
+[98.0],
+[98.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0]],
   name: 'Hity è. 1',
   yAxis: 0,
   visible: true,
   type: 'line'
 },
 {
-  data: [{
-  y: 65.0
-},
-{
-  y: 55.0
-},
-{
-  y: 49.0
-},
-{
-  y: 42.0
-},
-{
-  y: 35.0
-},
-{
-  y: 27.0
-},
-{
-  y: 21.0
-},
-{
-  y: 17.0
-},
-{
-  y: 15.0
-},
-{
-  y: 13.0
-},
-{
-  y: 12.0
-},
-{
-  y: 12.0
-},
-{
-  y: 12.0
-},
-{
-  y: 12.0
-},
-{
-  y: 14.0
-},
-{
-  y: 16.0
-},
-{
-  y: 18.0
-},
-{
-  y: 22.0
-},
-{
-  y: 27.0
-},
-{
-  y: 32.0
-},
-{
-  y: 37.0
-},
-{
-  y: 41.0
-},
-{
-  y: 45.0
-},
-{
-  y: 49.0
-},
-{
-  y: 55.0
-},
-{
-  y: 63.0
-},
-{
-  y: 69.0
-},
-{
-  y: 78.0
-},
-{
-  y: 88.0
-},
-{
-  y: 96.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-}],
-  name: 'Písnì z top 10',
+  data: [[65.0],
+[55.0],
+[49.0],
+[42.0],
+[35.0],
+[27.0],
+[21.0],
+[17.0],
+[15.0],
+[13.0],
+[12.0],
+[12.0],
+[12.0],
+[12.0],
+[14.0],
+[16.0],
+[18.0],
+[22.0],
+[27.0],
+[32.0],
+[37.0],
+[41.0],
+[45.0],
+[49.0],
+[55.0],
+[63.0],
+[69.0],
+[78.0],
+[88.0],
+[96.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0]],
+  name: 'Písnì z TOP 10',
   yAxis: 0,
   visible: true,
   type: 'line'
 },
 {
-  data: [{
-  y: 71.0
-},
-{
-  y: 67.0
-},
-{
-  y: 66.0
-},
-{
-  y: 65.0
-},
-{
-  y: 63.0
-},
-{
-  y: 60.0
-},
-{
-  y: 59.0
-},
-{
-  y: 60.0
-},
-{
-  y: 62.0
-},
-{
-  y: 67.0
-},
-{
-  y: 73.0
-},
-{
-  y: 79.0
-},
-{
-  y: 86.0
-},
-{
-  y: 98.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-},
-{
-  y: 101.0
-}],
-  name: 'Písnì z top 100',
+  data: [[71.0],
+[67.0],
+[66.0],
+[65.0],
+[63.0],
+[60.0],
+[59.0],
+[60.0],
+[62.0],
+[67.0],
+[73.0],
+[79.0],
+[86.0],
+[98.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0],
+[101.0]],
+  name: 'Písnì z TOP 100',
   yAxis: 0,
   visible: true,
   type: 'line'
@@ -571,10 +259,9 @@ Highcharts.chart('typicka_trajektorie',
 },
   yAxis: [{
   max: 100,
-  min: 1,
   reversed: true,
   title: {
-  text: ` `
+  text: 'Pozice'
 }
 }]
 },
