--- a/grafy/vydavatelstvo.html
+++ b/grafy/vydavatelstvo.html
@@ -20,60 +20,24 @@ Highcharts.chart('vydavatelstvo',
   text: 'Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
-  data: [{
-  y: 47.4
-},
-{
-  y: 48.9
-},
-{
-  y: 44.7
-},
-{
-  y: 47.3
-},
-{
-  y: 48.4
-},
-{
-  y: 50.4
-},
-{
-  y: 44.3
-},
-{
-  y: 42.6
-},
-{
-  y: 45.0
-},
-{
-  y: 39.6
-},
-{
-  y: 37.1
-},
-{
-  y: 37.5
-},
-{
-  y: 42.3
-},
-{
-  y: 45.5
-},
-{
-  y: 50.0
-},
-{
-  y: 41.5
-},
-{
-  y: 39.0
-},
-{
-  y: 39.0
-}],
+  data: [[47.4],
+[48.9],
+[44.7],
+[47.3],
+[48.4],
+[50.4],
+[44.3],
+[42.6],
+[45.0],
+[39.6],
+[37.1],
+[37.5],
+[42.3],
+[45.5],
+[50.0],
+[41.5],
+[39.0],
+[39.0]],
   name: 'Universal Music',
   yAxis: 0,
   tooltip: {
@@ -83,60 +47,24 @@ Highcharts.chart('vydavatelstvo',
   type: 'line'
 },
 {
-  data: [{
-  y: 33.0
-},
-{
-  y: 30.6
-},
-{
-  y: 33.2
-},
-{
-  y: 25.3
-},
-{
-  y: 20.6
-},
-{
-  y: 22.5
-},
-{
-  y: 21.3
-},
-{
-  y: 18.7
-},
-{
-  y: 19.3
-},
-{
-  y: 22.1
-},
-{
-  y: 20.1
-},
-{
-  y: 24.9
-},
-{
-  y: 22.1
-},
-{
-  y: 19.5
-},
-{
-  y: 16.5
-},
-{
-  y: 20.9
-},
-{
-  y: 19.7
-},
-{
-  y: 15.4
-}],
+  data: [[33.0],
+[30.6],
+[33.2],
+[25.3],
+[20.6],
+[22.5],
+[21.3],
+[18.7],
+[19.3],
+[22.1],
+[20.1],
+[24.9],
+[22.1],
+[19.5],
+[16.5],
+[20.9],
+[19.7],
+[15.4]],
   name: 'Warner Music',
   yAxis: 0,
   tooltip: {
@@ -146,60 +74,24 @@ Highcharts.chart('vydavatelstvo',
   type: 'line'
 },
 {
-  data: [{
-  y: 18.5
-},
-{
-  y: 18.2
-},
-{
-  y: 17.7
-},
-{
-  y: 18.4
-},
-{
-  y: 18.6
-},
-{
-  y: 15.1
-},
-{
-  y: 18.3
-},
-{
-  y: 22.9
-},
-{
-  y: 22.3
-},
-{
-  y: 20.8
-},
-{
-  y: 24.0
-},
-{
-  y: 23.7
-},
-{
-  y: 18.8
-},
-{
-  y: 16.8
-},
-{
-  y: 13.7
-},
-{
-  y: 15.1
-},
-{
-  y: 18.4
-},
-{
-  y: 21.5
-}],
+  data: [[18.5],
+[18.2],
+[17.7],
+[18.4],
+[18.6],
+[15.1],
+[18.3],
+[22.9],
+[22.3],
+[20.8],
+[24.0],
+[23.7],
+[18.8],
+[16.8],
+[13.7],
+[15.1],
+[18.4],
+[21.5]],
   name: 'Sony Music',
   yAxis: 0,
   tooltip: {
@@ -209,60 +101,24 @@ Highcharts.chart('vydavatelstvo',
   type: 'line'
 },
 {
-  data: [{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 1.2
-},
-{
-  y: 0.9
-},
-{
-  y: 0.9
-},
-{
-  y: 2.5
-},
-{
-  y: 2.2
-},
-{
-  y: 3.0
-},
-{
-  y: 2.3
-},
-{
-  y: 2.6
-},
-{
-  y: 1.3
-},
-{
-  y: 2.7
-},
-{
-  y: 3.7
-},
-{
-  y: 5.5
-},
-{
-  y: 5.2
-},
-{
-  y: 5.9
-},
-{
-  y: 6.0
-}],
+  data: [[0.0],
+[0.0],
+[0.0],
+[1.2],
+[0.9],
+[0.9],
+[2.5],
+[2.2],
+[3.0],
+[2.3],
+[2.6],
+[1.3],
+[2.7],
+[3.7],
+[5.5],
+[5.2],
+[5.9],
+[6.0]],
   name: 'Supraphon',
   yAxis: 0,
   tooltip: {
@@ -272,60 +128,24 @@ Highcharts.chart('vydavatelstvo',
   type: 'line'
 },
 {
-  data: [{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 1.5
-},
-{
-  y: 2.3
-},
-{
-  y: 2.9
-},
-{
-  y: 2.2
-},
-{
-  y: 4.2
-},
-{
-  y: 5.0
-},
-{
-  y: 3.3
-},
-{
-  y: 4.1
-},
-{
-  y: 3.7
-},
-{
-  y: 4.3
-},
-{
-  y: 4.4
-},
-{
-  y: 3.7
-},
-{
-  y: 4.3
-}],
+  data: [[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[1.5],
+[2.3],
+[2.9],
+[2.2],
+[4.2],
+[5.0],
+[3.3],
+[4.1],
+[3.7],
+[4.3],
+[4.4],
+[3.7],
+[4.3]],
   name: 'Brainzone',
   yAxis: 0,
   tooltip: {
@@ -335,60 +155,24 @@ Highcharts.chart('vydavatelstvo',
   type: 'line'
 },
 {
-  data: [{
-  y: 1.1
-},
-{
-  y: 2.3
-},
-{
-  y: 4.5
-},
-{
-  y: 7.9
-},
-{
-  y: 11.4
-},
-{
-  y: 9.6
-},
-{
-  y: 11.2
-},
-{
-  y: 10.6
-},
-{
-  y: 8.3
-},
-{
-  y: 10.9
-},
-{
-  y: 11.2
-},
-{
-  y: 9.2
-},
-{
-  y: 10.0
-},
-{
-  y: 10.8
-},
-{
-  y: 10.1
-},
-{
-  y: 12.9
-},
-{
-  y: 13.3
-},
-{
-  y: 13.8
-}],
+  data: [[1.1],
+[2.3],
+[4.5],
+[7.9],
+[11.4],
+[9.6],
+[11.2],
+[10.6],
+[8.3],
+[10.9],
+[11.2],
+[9.2],
+[10.0],
+[10.8],
+[10.1],
+[12.9],
+[13.3],
+[13.8]],
   name: 'ostatní',
   yAxis: 0,
   tooltip: {
