--- a/grafy/zastoupeni_zemi.html
+++ b/grafy/zastoupeni_zemi.html
@@ -20,60 +20,24 @@ Highcharts.chart('zastoupeni_zemi',
   text: 'Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
-  data: [{
-  y: 22.8
-},
-{
-  y: 29.1
-},
-{
-  y: 26.5
-},
-{
-  y: 23.1
-},
-{
-  y: 19.9
-},
-{
-  y: 24.8
-},
-{
-  y: 27.9
-},
-{
-  y: 23.4
-},
-{
-  y: 23.3
-},
-{
-  y: 27.1
-},
-{
-  y: 27.7
-},
-{
-  y: 21.4
-},
-{
-  y: 31.5
-},
-{
-  y: 30.9
-},
-{
-  y: 31.8
-},
-{
-  y: 31.4
-},
-{
-  y: 33.5
-},
-{
-  y: 32.8
-}],
+  data: [[22.8],
+[29.1],
+[26.5],
+[23.1],
+[19.9],
+[24.8],
+[27.9],
+[23.4],
+[23.3],
+[27.1],
+[27.7],
+[21.4],
+[31.5],
+[30.9],
+[31.8],
+[31.4],
+[33.5],
+[32.8]],
   name: 'Èesko',
   yAxis: 0,
   tooltip: {
@@ -83,60 +47,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 27.8
-},
-{
-  y: 25.5
-},
-{
-  y: 26.2
-},
-{
-  y: 29.6
-},
-{
-  y: 31.1
-},
-{
-  y: 30.3
-},
-{
-  y: 25.3
-},
-{
-  y: 26.5
-},
-{
-  y: 24.2
-},
-{
-  y: 24.7
-},
-{
-  y: 25.0
-},
-{
-  y: 23.6
-},
-{
-  y: 21.5
-},
-{
-  y: 23.2
-},
-{
-  y: 19.3
-},
-{
-  y: 16.8
-},
-{
-  y: 15.8
-},
-{
-  y: 17.1
-}],
+  data: [[27.8],
+[25.5],
+[26.2],
+[29.6],
+[31.1],
+[30.3],
+[25.3],
+[26.5],
+[24.2],
+[24.7],
+[25.0],
+[23.6],
+[21.5],
+[23.2],
+[19.3],
+[16.8],
+[15.8],
+[17.1]],
   name: 'Spojené státy americké',
   yAxis: 0,
   tooltip: {
@@ -146,60 +74,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 13.9
-},
-{
-  y: 10.7
-},
-{
-  y: 13.3
-},
-{
-  y: 16.6
-},
-{
-  y: 12.2
-},
-{
-  y: 8.4
-},
-{
-  y: 11.3
-},
-{
-  y: 18.2
-},
-{
-  y: 20.8
-},
-{
-  y: 18.0
-},
-{
-  y: 16.3
-},
-{
-  y: 18.7
-},
-{
-  y: 15.9
-},
-{
-  y: 15.4
-},
-{
-  y: 16.1
-},
-{
-  y: 17.2
-},
-{
-  y: 19.8
-},
-{
-  y: 14.8
-}],
+  data: [[13.9],
+[10.7],
+[13.3],
+[16.6],
+[12.2],
+[8.4],
+[11.3],
+[18.2],
+[20.6],
+[18.0],
+[16.3],
+[18.7],
+[15.9],
+[15.4],
+[16.1],
+[17.2],
+[19.8],
+[14.8]],
   name: 'Spojené království',
   yAxis: 0,
   tooltip: {
@@ -209,60 +101,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 1.6
-},
-{
-  y: 1.1
-},
-{
-  y: 1.4
-},
-{
-  y: 1.4
-},
-{
-  y: 2.1
-},
-{
-  y: 1.3
-},
-{
-  y: 1.6
-},
-{
-  y: 2.3
-},
-{
-  y: 2.1
-},
-{
-  y: 4.1
-},
-{
-  y: 4.6
-},
-{
-  y: 4.8
-},
-{
-  y: 3.8
-},
-{
-  y: 4.9
-},
-{
-  y: 4.8
-},
-{
-  y: 6.8
-},
-{
-  y: 3.0
-},
-{
-  y: 3.1
-}],
+  data: [[1.6],
+[1.1],
+[1.4],
+[1.4],
+[2.1],
+[1.3],
+[1.6],
+[2.3],
+[2.0],
+[4.1],
+[4.6],
+[4.8],
+[3.8],
+[4.9],
+[4.8],
+[6.5],
+[3.0],
+[3.1]],
   name: 'Nìmecko',
   yAxis: 0,
   tooltip: {
@@ -272,60 +128,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 2.4
-},
-{
-  y: 3.3
-},
-{
-  y: 1.3
-},
-{
-  y: 4.0
-},
-{
-  y: 3.5
-},
-{
-  y: 3.2
-},
-{
-  y: 4.1
-},
-{
-  y: 1.7
-},
-{
-  y: 1.8
-},
-{
-  y: 1.6
-},
-{
-  y: 1.0
-},
-{
-  y: 1.0
-},
-{
-  y: 1.8
-},
-{
-  y: 1.6
-},
-{
-  y: 1.6
-},
-{
-  y: 0.3
-},
-{
-  y: 1.5
-},
-{
-  y: 2.2
-}],
+  data: [[2.4],
+[3.3],
+[1.3],
+[4.0],
+[3.5],
+[3.2],
+[4.1],
+[1.7],
+[1.8],
+[1.6],
+[1.0],
+[1.0],
+[1.8],
+[1.6],
+[1.6],
+[0.3],
+[1.5],
+[2.2]],
   name: 'Slovensko',
   yAxis: 0,
   tooltip: {
@@ -335,60 +155,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 6.1
-},
-{
-  y: 5.5
-},
-{
-  y: 7.2
-},
-{
-  y: 2.1
-},
-{
-  y: 1.0
-},
-{
-  y: 1.3
-},
-{
-  y: 1.6
-},
-{
-  y: 1.5
-},
-{
-  y: 2.1
-},
-{
-  y: 1.4
-},
-{
-  y: 3.2
-},
-{
-  y: 3.0
-},
-{
-  y: 1.1
-},
-{
-  y: 1.0
-},
-{
-  y: 3.1
-},
-{
-  y: 4.3
-},
-{
-  y: 3.0
-},
-{
-  y: 0.6
-}],
+  data: [[6.1],
+[5.5],
+[7.2],
+[2.1],
+[1.0],
+[1.3],
+[1.6],
+[1.5],
+[2.1],
+[1.4],
+[3.2],
+[3.0],
+[1.1],
+[1.0],
+[3.1],
+[4.3],
+[3.0],
+[0.6]],
   name: 'Kanada',
   yAxis: 0,
   tooltip: {
@@ -398,60 +182,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 2.1
-},
-{
-  y: 2.8
-},
-{
-  y: 1.6
-},
-{
-  y: 2.0
-},
-{
-  y: 3.0
-},
-{
-  y: 4.2
-},
-{
-  y: 2.6
-},
-{
-  y: 2.2
-},
-{
-  y: 3.5
-},
-{
-  y: 3.9
-},
-{
-  y: 4.0
-},
-{
-  y: 4.6
-},
-{
-  y: 2.6
-},
-{
-  y: 1.2
-},
-{
-  y: 1.2
-},
-{
-  y: 0.8
-},
-{
-  y: 1.0
-},
-{
-  y: 1.9
-}],
+  data: [[2.1],
+[2.8],
+[1.6],
+[2.0],
+[3.0],
+[4.2],
+[2.6],
+[2.2],
+[3.5],
+[3.9],
+[4.0],
+[4.6],
+[2.6],
+[1.2],
+[1.2],
+[0.8],
+[1.0],
+[1.9]],
   name: 'Francie',
   yAxis: 0,
   tooltip: {
@@ -461,60 +209,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 0.6
-},
-{
-  y: 1.6
-},
-{
-  y: 0.6
-},
-{
-  y: 1.3
-},
-{
-  y: 1.1
-},
-{
-  y: 2.5
-},
-{
-  y: 2.6
-},
-{
-  y: 3.8
-},
-{
-  y: 3.9
-},
-{
-  y: 5.5
-},
-{
-  y: 3.3
-},
-{
-  y: 2.3
-},
-{
-  y: 3.1
-},
-{
-  y: 2.4
-},
-{
-  y: 0.8
-},
-{
-  y: 1.2
-},
-{
-  y: 2.3
-},
-{
-  y: 1.9
-}],
+  data: [[0.6],
+[1.6],
+[0.6],
+[1.3],
+[1.1],
+[2.5],
+[2.6],
+[3.8],
+[3.9],
+[5.5],
+[3.3],
+[2.3],
+[3.1],
+[2.4],
+[0.8],
+[1.2],
+[2.3],
+[1.9]],
   name: 'Švédsko',
   yAxis: 0,
   tooltip: {
@@ -524,60 +236,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 5.6
-},
-{
-  y: 3.9
-},
-{
-  y: 1.6
-},
-{
-  y: 1.8
-},
-{
-  y: 1.3
-},
-{
-  y: 0.4
-},
-{
-  y: 0.7
-},
-{
-  y: 0.8
-},
-{
-  y: 1.3
-},
-{
-  y: 0.8
-},
-{
-  y: 1.4
-},
-{
-  y: 2.0
-},
-{
-  y: 1.4
-},
-{
-  y: 2.9
-},
-{
-  y: 2.8
-},
-{
-  y: 4.7
-},
-{
-  y: 3.2
-},
-{
-  y: 2.7
-}],
+  data: [[5.6],
+[3.9],
+[1.6],
+[1.8],
+[1.3],
+[0.4],
+[0.7],
+[0.8],
+[1.3],
+[0.8],
+[1.4],
+[2.0],
+[1.4],
+[2.9],
+[2.8],
+[4.7],
+[3.2],
+[2.7]],
   name: 'nezjištìno',
   yAxis: 0,
   tooltip: {
@@ -587,60 +263,24 @@ Highcharts.chart('zastoupeni_zemi',
   type: 'line'
 },
 {
-  data: [{
-  y: 17.2
-},
-{
-  y: 16.4
-},
-{
-  y: 20.2
-},
-{
-  y: 18.0
-},
-{
-  y: 24.7
-},
-{
-  y: 23.6
-},
-{
-  y: 22.2
-},
-{
-  y: 19.6
-},
-{
-  y: 16.9
-},
-{
-  y: 12.9
-},
-{
-  y: 13.6
-},
-{
-  y: 18.5
-},
-{
-  y: 17.5
-},
-{
-  y: 16.7
-},
-{
-  y: 18.4
-},
-{
-  y: 16.4
-},
-{
-  y: 16.9
-},
-{
-  y: 22.8
-}],
+  data: [[17.2],
+[16.4],
+[20.2],
+[18.0],
+[24.7],
+[23.6],
+[22.2],
+[19.6],
+[17.2],
+[12.9],
+[13.6],
+[18.5],
+[17.5],
+[16.7],
+[18.4],
+[16.7],
+[16.9],
+[22.8]],
   name: 'ostatní',
   yAxis: 0,
   tooltip: {
