grafy pro 4. díl

--- a/grafy/pomer_stream_radio.html
+++ b/grafy/pomer_stream_radio.html
@@ -12,33 +12,15 @@ Highcharts.chart('pomer_stream_radio',
   text: 'Zdroj dat: ÈNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
-  data: [{
-  y: 37.1
-},
-{
-  y: 36.4
-},
-{
-  y: 31.6
-},
-{
-  y: 31.7
-},
-{
-  y: 27.2
-},
-{
-  y: 24.4
-},
-{
-  y: 22.6
-},
-{
-  y: 18.4
-},
-{
-  y: 16.1
-}],
+  data: [[37.1],
+[36.4],
+[31.6],
+[31.7],
+[27.2],
+[24.4],
+[22.6],
+[18.4],
+[16.1]],
   name: 'Podíl interpretù, kteøí se bìhem roku objevili v rádiových i digitálních TOP 100',
   yAxis: 0,
   tooltip: {
