--- a/grafy/genderovy_podil.html
+++ b/grafy/genderovy_podil.html
@@ -1,4 +1,4 @@
-<html><head><title>Podíl sólovì vystupujících žen a mužù v týdenních žebøíècích 100 nejhranìjších písní</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Zastoupení žen v rádiových hitparádách dekádu klesalo</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="genderovy_podil">
         <div id="container"></div>
         </figure>
@@ -17,7 +17,7 @@ Highcharts.chart('genderovy_podil',
   credits: {
   enabled: true,
   href: 'https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika',
-  text: 'Zdroj dat: Èeská národní skupina Mezinárodní federace hudebního prùmyslu a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
+  text: 'Zdroj dat: ÈNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   plotOptions: {
   column: {
@@ -26,60 +26,24 @@ Highcharts.chart('genderovy_podil',
 }
 },
   series: [{
-  data: [{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.4
-},
-{
-  y: 1.5
-},
-{
-  y: 0.8
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 1.8
-},
-{
-  y: 4.2
-},
-{
-  y: 0.8
-},
-{
-  y: 0.4
-},
-{
-  y: 1.2
-},
-{
-  y: 0.8
-},
-{
-  y: 0.5
-},
-{
-  y: 1.0
-},
-{
-  y: 2.6
-},
-{
-  y: 1.6
-},
-{
-  y: 3.8
-}],
+  data: [[0.0],
+[0.0],
+[0.4],
+[1.5],
+[0.8],
+[0.0],
+[0.0],
+[1.8],
+[4.2],
+[0.8],
+[0.4],
+[1.2],
+[0.9],
+[0.5],
+[1.0],
+[2.6],
+[1.6],
+[3.8]],
   name: 'podíl genderfluid a nebinárních osob',
   yAxis: 0,
   tooltip: {
@@ -89,60 +53,24 @@ Highcharts.chart('genderovy_podil',
   type: 'column'
 },
 {
-  data: [{
-  y: 50.7
-},
-{
-  y: 50.4
-},
-{
-  y: 49.0
-},
-{
-  y: 43.4
-},
-{
-  y: 46.6
-},
-{
-  y: 52.3
-},
-{
-  y: 57.3
-},
-{
-  y: 59.0
-},
-{
-  y: 64.4
-},
-{
-  y: 70.3
-},
-{
-  y: 69.7
-},
-{
-  y: 76.8
-},
-{
-  y: 78.2
-},
-{
-  y: 76.0
-},
-{
-  y: 71.9
-},
-{
-  y: 70.9
-},
-{
-  y: 74.0
-},
-{
-  y: 67.2
-}],
+  data: [[50.7],
+[50.4],
+[49.0],
+[43.4],
+[46.6],
+[52.3],
+[57.3],
+[59.0],
+[64.2],
+[70.3],
+[69.7],
+[76.7],
+[77.9],
+[75.7],
+[71.9],
+[70.8],
+[74.0],
+[67.2]],
   name: 'podíl mužù',
   yAxis: 0,
   tooltip: {
@@ -152,60 +80,24 @@ Highcharts.chart('genderovy_podil',
   type: 'column'
 },
 {
-  data: [{
-  y: 49.3
-},
-{
-  y: 49.6
-},
-{
-  y: 50.7
-},
-{
-  y: 55.1
-},
-{
-  y: 52.6
-},
-{
-  y: 47.7
-},
-{
-  y: 42.7
-},
-{
-  y: 39.2
-},
-{
-  y: 31.4
-},
-{
-  y: 29.0
-},
-{
-  y: 29.9
-},
-{
-  y: 22.0
-},
-{
-  y: 20.9
-},
-{
-  y: 23.5
-},
-{
-  y: 27.0
-},
-{
-  y: 26.5
-},
-{
-  y: 24.4
-},
-{
-  y: 29.1
-}],
+  data: [[49.3],
+[49.6],
+[50.7],
+[55.1],
+[52.6],
+[47.7],
+[42.7],
+[39.2],
+[31.6],
+[29.0],
+[29.9],
+[22.1],
+[21.3],
+[23.8],
+[27.0],
+[26.6],
+[24.4],
+[29.1]],
   name: 'podíl žen',
   yAxis: 0,
   tooltip: {
@@ -216,12 +108,12 @@ Highcharts.chart('genderovy_podil',
 }],
   subtitle: {
   align: 'left',
-  text: 'Z 947 lidí v datech se jinak než jako žena èi muž identifikují Miley Cyrus (Ashley O), Demi Lovato, Sam Smith, Ashnikko, Kim Dracula, King Princess a Lil Uzi Vert'
+  text: 'Genderové podíly sólovì vystupujícího interpretstva v týdenních hitparádách TOP 100 radio. Z 935 lidí v datech se jinak než jako žena èi muž identifikují Miley Cyrus (Ashley O), Demi Lovato, Sam Smith, Ashnikko, Kim Dracula, King Princess a Lil Uzi Vert.'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Podíl sólovì vystupujících žen a mužù v týdenních žebøíècích 100 nejhranìjších písní'
+  text: 'Zastoupení žen v rádiových hitparádách dekádu klesalo'
 },
   xAxis: {
   categories: ['2006',
