--- a/grafy/hiphop.html
+++ b/grafy/hiphop.html
@@ -20,62 +20,26 @@ Highcharts.chart('hiphop',
   text: 'Zdroj dat: ÈNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   series: [{
-  data: [{
-  y: 8.3
-},
-{
-  y: 4.7
-},
-{
-  y: 2.6
-},
-{
-  y: 6.7
-},
-{
-  y: 8.0
-},
-{
-  y: 7.3
-},
-{
-  y: 2.8
-},
-{
-  y: 3.5
-},
-{
-  y: 2.7
-},
-{
-  y: 2.7
-},
-{
-  y: 2.4
-},
-{
-  y: 2.2
-},
-{
-  y: 3.4
-},
-{
-  y: 2.9
-},
-{
-  y: 0.5
-},
-{
-  y: 3.1
-},
-{
-  y: 3.9
-},
-{
-  y: 5.7
-}],
+  data: [[8.3],
+[4.7],
+[2.6],
+[6.7],
+[8.0],
+[7.3],
+[2.8],
+[3.5],
+[2.7],
+[2.7],
+[2.4],
+[2.2],
+[3.5],
+[3.0],
+[0.5],
+[3.1],
+[3.9],
+[5.7]],
   name: 'TOP 100 ÈR - rádio',
-  yAxis: 0,
+  yAxis: 1,
   tooltip: {
   valueSuffix: ' %'
 },
@@ -83,125 +47,26 @@ Highcharts.chart('hiphop',
   type: 'line'
 },
 {
-  data: [{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: null
-},
-{
-  y: 6.2
-},
-{
-  y: 4.3
-},
-{
-  y: 12.4
-},
-{
-  y: 19.5
-},
-{
-  y: 27.9
-},
-{
-  y: 41.7
-},
-{
-  y: 33.1
-},
-{
-  y: 31.2
-},
-{
-  y: 30.7
-}],
+  data: [[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[6.2],
+[4.3],
+[12.4],
+[19.6],
+[28.0],
+[41.7],
+[33.1],
+[31.2],
+[30.7]],
   name: 'TOP 100 ÈR - digital',
-  yAxis: 0,
-  tooltip: {
-  valueSuffix: ' %'
-},
-  visible: true,
-  type: 'line'
-},
-{
-  data: [{
-  y: 16.0
-},
-{
-  y: 10.6
-},
-{
-  y: 12.0
-},
-{
-  y: 10.4
-},
-{
-  y: 15.7
-},
-{
-  y: 14.6
-},
-{
-  y: 13.8
-},
-{
-  y: 19.1
-},
-{
-  y: 11.1
-},
-{
-  y: 16.7
-},
-{
-  y: 17.2
-},
-{
-  y: 33.1
-},
-{
-  y: 40.5
-},
-{
-  y: 36.8
-},
-{
-  y: 35.1
-},
-{
-  y: 24.9
-},
-{
-  y: null
-},
-{
-  y: null
-}],
-  name: 'TOP 100 Billboard',
-  yAxis: 0,
+  yAxis: 1,
   tooltip: {
   valueSuffix: ' %'
 },
@@ -239,11 +104,18 @@ Highcharts.chart('hiphop',
   min: 0
 },
   yAxis: [{
+  reversed: false,
+  title: {
+  text: ` `
+}
+},
+{
   labels: {
   format: '{value} %'
 },
   max: 50,
   min: 0,
+  opposite: true,
   title: {
   text: ` `
 }
