--- a/grafy/histogram_stari.html
+++ b/grafy/histogram_stari.html
@@ -1,4 +1,4 @@
-<html><head><title>Vìky sólovì vystupujících muù a en v tıdenních ebøíècích 100 nejhranìjších písní</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>eny mizí z rádiové hitparády døív ne mui</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="histogram_stari">
         <div id="container"></div>
         </figure>
@@ -10,7 +10,7 @@ Highcharts.chart('histogram_stari',
   credits: {
   enabled: true,
   href: 'https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika',
-  text: 'Zdroj dat: Èeská národní skupina Mezinárodní federace hudebního prùmyslu a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
+  text: 'Zdroj dat: ÈNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz'
 },
   plotOptions: {
   column: {
@@ -22,318 +22,114 @@ Highcharts.chart('histogram_stari',
 }
 },
   series: [{
-  data: [{
-  y: 53.0
-},
-{
-  y: 58.0
-},
-{
-  y: 198.0
-},
-{
-  y: 466.0
-},
-{
-  y: 378.0
-},
-{
-  y: 497.0
-},
-{
-  y: 563.0
-},
-{
-  y: 780.0
-},
-{
-  y: 1378.0
-},
-{
-  y: 1497.0
-},
-{
-  y: 1314.0
-},
-{
-  y: 1316.0
-},
-{
-  y: 1459.0
-},
-{
-  y: 1246.0
-},
-{
-  y: 933.0
-},
-{
-  y: 1021.0
-},
-{
-  y: 507.0
-},
-{
-  y: 648.0
-},
-{
-  y: 641.0
-},
-{
-  y: 691.0
-},
-{
-  y: 329.0
-},
-{
-  y: 170.0
-},
-{
-  y: 307.0
-},
-{
-  y: 373.0
-},
-{
-  y: 270.0
-},
-{
-  y: 212.0
-},
-{
-  y: 125.0
-},
-{
-  y: 300.0
-},
-{
-  y: 176.0
-},
-{
-  y: 117.0
-},
-{
-  y: 100.0
-},
-{
-  y: 100.0
-},
-{
-  y: 99.0
-},
-{
-  y: 186.0
-},
-{
-  y: 108.0
-},
-{
-  y: 116.0
-},
-{
-  y: 76.0
-},
-{
-  y: 83.0
-},
-{
-  y: 37.0
-},
-{
-  y: 71.0
-},
-{
-  y: 43.0
-},
-{
-  y: 89.0
-},
-{
-  y: 92.0
-},
-{
-  y: 43.0
-},
-{
-  y: 3.0
-},
-{
-  y: 5.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 0.0
-},
-{
-  y: 2.0
-}],
+  data: [[53.0],
+[58.0],
+[198.0],
+[466.0],
+[378.0],
+[497.0],
+[563.0],
+[780.0],
+[1378.0],
+[1497.0],
+[1314.0],
+[1316.0],
+[1459.0],
+[1246.0],
+[933.0],
+[1021.0],
+[507.0],
+[648.0],
+[641.0],
+[691.0],
+[329.0],
+[170.0],
+[307.0],
+[373.0],
+[270.0],
+[212.0],
+[125.0],
+[300.0],
+[176.0],
+[117.0],
+[100.0],
+[100.0],
+[99.0],
+[186.0],
+[108.0],
+[116.0],
+[76.0],
+[83.0],
+[37.0],
+[71.0],
+[43.0],
+[89.0],
+[92.0],
+[43.0],
+[3.0],
+[5.0],
+[0.0],
+[0.0],
+[0.0],
+[0.0],
+[2.0]],
   name: 'vìky en',
   yAxis: 0,
   visible: true,
   type: 'column'
 },
 {
-  data: [{
-  y: 0.0
-},
-{
-  y: 15.0
-},
-{
-  y: 77.0
-},
-{
-  y: 204.0
-},
-{
-  y: 254.0
-},
-{
-  y: 403.0
-},
-{
-  y: 530.0
-},
-{
-  y: 759.0
-},
-{
-  y: 1274.0
-},
-{
-  y: 1631.0
-},
-{
-  y: 1615.0
-},
-{
-  y: 1840.0
-},
-{
-  y: 1534.0
-},
-{
-  y: 1610.0
-},
-{
-  y: 1872.0
-},
-{
-  y: 1849.0
-},
-{
-  y: 1767.0
-},
-{
-  y: 2122.0
-},
-{
-  y: 1216.0
-},
-{
-  y: 1283.0
-},
-{
-  y: 1069.0
-},
-{
-  y: 1154.0
-},
-{
-  y: 1135.0
-},
-{
-  y: 969.0
-},
-{
-  y: 672.0
-},
-{
-  y: 642.0
-},
-{
-  y: 776.0
-},
-{
-  y: 681.0
-},
-{
-  y: 569.0
-},
-{
-  y: 428.0
-},
-{
-  y: 381.0
-},
-{
-  y: 278.0
-},
-{
-  y: 260.0
-},
-{
-  y: 222.0
-},
-{
-  y: 260.0
-},
-{
-  y: 205.0
-},
-{
-  y: 217.0
-},
-{
-  y: 210.0
-},
-{
-  y: 225.0
-},
-{
-  y: 119.0
-},
-{
-  y: 83.0
-},
-{
-  y: 91.0
-},
-{
-  y: 53.0
-},
-{
-  y: 54.0
-},
-{
-  y: 33.0
-},
-{
-  y: 58.0
-},
-{
-  y: 28.0
-},
-{
-  y: 89.0
-},
-{
-  y: 54.0
-},
-{
-  y: 20.0
-},
-{
-  y: 23.0
-}],
+  data: [[0.0],
+[15.0],
+[77.0],
+[204.0],
+[254.0],
+[403.0],
+[530.0],
+[759.0],
+[1274.0],
+[1631.0],
+[1615.0],
+[1840.0],
+[1534.0],
+[1610.0],
+[1872.0],
+[1849.0],
+[1767.0],
+[2122.0],
+[1216.0],
+[1283.0],
+[1069.0],
+[1154.0],
+[1135.0],
+[969.0],
+[672.0],
+[642.0],
+[776.0],
+[681.0],
+[569.0],
+[428.0],
+[381.0],
+[278.0],
+[260.0],
+[222.0],
+[260.0],
+[205.0],
+[217.0],
+[210.0],
+[225.0],
+[119.0],
+[83.0],
+[91.0],
+[53.0],
+[54.0],
+[33.0],
+[58.0],
+[28.0],
+[89.0],
+[54.0],
+[20.0],
+[23.0]],
   name: 'vìky muù',
   yAxis: 0,
   visible: true,
@@ -341,12 +137,12 @@ Highcharts.chart('histogram_stari',
 }],
   subtitle: {
   align: 'left',
-  text: 'Do souètù poèítáme kadou píseò a kadı tıden v hitparádì zvláš. Pro pøehlednost oøezáváme sporadicky osídlené okraje grafu, tedy interprety a interpretky pod 15 a nad 65 let.'
+  text: 'Do 24 let mají sólovì vystupující eny stejnou šanci na prosazení jako sólovì vystupující mui. Zatímco eny se pak z rádií vytrácejí, mui se drí o dekádu déle. (Do souètù poèítáme kadou píseò a kadı tıden v hitparádì zvláš. Pro pøehlednost oøezáváme sporadicky osídlené okraje grafu.)'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Vìky sólovì vystupujících muù a en v tıdenních ebøíècích 100 nejhranìjších písní'
+  text: 'eny mizí z rádiové hitparády døív ne mui'
 },
   xAxis: {
   categories: ['15',
