--- a/grafy/calin.html
+++ b/grafy/calin.html
@@ -1,4 +1,4 @@
-<html><head><title>Jak byl Calin vysoko na streamu a v rádiu</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Jak vysoko se dostal Calin na streamu a v rádiu</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="calin">
         <div id="container"></div>
         </figure>
@@ -635,12 +635,12 @@ Highcharts.chart('calin',
 }],
   subtitle: {
   align: 'left',
-  text: 'Do digitální hitparády pronikl poslední držitel Andìla pro Objev roku se 47 písnìmi. V rádiích se do TOP 100 dostaly tøi.'
+  text: 'Do digitální hitparády pronikl držitel Andìla pro Objev roku se 47 písnìmi. V rádiích se do TOP 100 dostaly tøi.'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Jak byl Calin vysoko na streamu a v rádiu'
+  text: 'Jak vysoko se dostal Calin na streamu a v rádiu'
 },
   xAxis: {
   categories: ['2018-01',
